<resources>
    <string name="app_name">微帮帮</string>
    <string name="no_net">网络不可用,请检查你的网络</string>

    <!--首页-->
    <string name="home_page">首页</string>
    <string name="member_center">会员中心</string>
    <string name="personal_center">个人中心</string>


    <string name="woyaozhuangyong">我要赚佣</string>
    <string name="mianfeilingyong">会员福利</string>
    <string name="kaitonghuiyuan">开通会员</string>
    <string name="toufangguanggao">投放广告</string>
    <string name="fenxiangzhuanqian">分享赚钱</string>
    <string name="lianxikefu">联系客服</string>

    <string name="notice_1">微帮帮APP正式上架</string>
    <string name="notice_2">微帮帮APP正式上架微帮帮APP...</string>

    <!--公告栏-->
    <string name="notice_board">公告栏</string>
    <!--公告详情-->
    <string name="notice_details">公告栏</string>

    <!--会员中心-->
    <string name="woderenwu">我的任务</string>
    <string name="paihangbang">排行榜</string>
    <string name="renwuguize">任务规则</string>
    <string name="renwudating">任务大厅</string>


    <!--我要赚佣-->
    <string name="make_money_tips">仔细阅读 ~ 教你足不出户赚佣金 ~</string>
    <string name="lijizhuanyong">立 即 赚 佣</string>

    <!--免费领用-->
    <string name="free_lead_tips">请填写您的基本信息领取奖品</string>
    <string name="name">姓名</string>
    <string name="phone">手机号</string>
    <string name="address">详细地址</string>
    <string name="name_hint">请填写真实姓名</string>
    <string name="phone_hint">请填写手机号码</string>
    <string name="address_hint">请填写您的真实地址</string>
    <string name="lijilingqu">立 即 领 取</string>

    <!--开通会员-->
    <string name="regular_member">普通会员</string>
    <string name="senior_member">高级会员</string>
    <string name="xuanzezhifub">选择支付方式</string>
    <string name="zhifubao">支付宝支付</string>
    <string name="weixin">微信支付</string>
    <string name="pay_member">支付会员</string>
    <string name="amount_payable">应付金额:</string>
    <string name="lijizhifu">立 即 支 付</string>
    <string name="become_regular_member">成 为 普 通 会 员</string>
    <string name="become_senior_member">成 为 高 级 会 员</string>
    <!--投放广告-->
    <string name="tijiaotoufang">提 交 投 放</string>
    <string name="text_lenth_500">500字以内</string>
    <string name="guanggaoneirong">广告内容描述</string>
    <string name="guanggaoneirong_hint">请描述一下您的广告内容~</string>

    <!--分享赚钱-->
    <string name="share_money_tips"> - 扫码注册免费礼品拿到手软</string>
    <string name="invitation_code">邀请码 :</string>
    <string name="copy">复制</string>
    <string name="join_tip">一起加入微帮帮赚佣金</string>
    <string name="share_money_button">点 击 分 享</string>

    <!--联系客服-->
    <string name="contact_customer_tips">微帮帮客服服务中心</string>
    <string name="contact_customer_1">客服服务微信 1:</string>
    <string name="contact_customer_2">客服服务微信 2:</string>
    <string name="service_time">服务时间</string>
    <string name="service_am_time">AM\u30009:00 ~ 11:30</string>
    <string name="service_pm_time">PM\u300012:30 ~ 20:00</string>
    <string name="customer_service_hotline">客户服务热线 : 400-0499-995</string>

    <!--个人中心-->
    <string name="personal_info">个人资料</string>
    <string name="mine_team">我的团队</string>
    <string name="mine_wallet">我的钱包</string>
    <string name="put_forward">提现</string>
    <string name="change_password">修改密码</string>
    <string name="login_out">退出登录</string>

    <!--修改密码-->
    <string name="old_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="querenxiugai">确 认 修 改</string>
    <string name="original_password_tips">请填写原始密码</string>
    <string name="new_password_tips">请填写新密码</string>
    <string name="confirm_new_password_tips">请确认新密码</string>

    <!--个人资料-->
    <string name="head_portrait">头像</string>
    <string name="nick_name">昵称</string>
    <string name="nick_name_hint">请填写真实姓名</string>
    <string name="sex">性别</string>
    <string name="man">男生</string>
    <string name="woman">女生</string>
    <string name="age">年龄</string>
    <string name="age_hint">请填写真实年龄</string>
    <string name="owned_city">所属城市</string>
    <string name="owned_city_hint">请填写我所在的城市</string>
    <string name="urban_area">所属市区</string>
    <string name="urban_area_hint">请填写我所在的市区</string>
    <string name="detailed_address">详细地址</string>
    <string name="detailed_address_hint">请填写您的详细地址</string>

    <!--我的团队-->
    <string name="first_class_members">我的一级会员</string>
    <string name="two_level_members">我的二级会员</string>
    <string name="first_class_members_tip">一级会员可提供自己10%的收益</string>
    <string name="two_level_members_tip">二级会员可提供自己5%的收益</string>
    <string name="inviting_friends">邀 请 好 友</string>

    <!-- 登录注册找回密码 -->
    <string name="pwd">密码</string>
    <string name="pwd_again">确认密码</string>
    <string name="verification_code">验证码</string>
    <string name="verification_code_sending">验证码已发送，请查收。</string>
    <string name="get">获取</string>
    <string name="login">登    录</string>
    <string name="register">注    册</string>
    <string name="submit_updata">确  认  修  改</string>
    <string name="no_account">没有账号？</string>
    <string name="have_account">已有账号？</string>
    <string name="register_now">立即注册</string>
    <string name="login_now">立即登录</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="banquan">©2018-www.weibangbang.com-model</string>

    <!--任务大厅-->
    <string name="general_task">普通任务</string>
    <string name="advanced_task">高级任务</string>

    <!--任务详情-->
    <string name="task_details">任务详情</string>
    <string name="copywriting">文案</string>
    <string name="copywriting_tip">复制文案转发朋友圈</string>
    <string name="pic_info">图片信息</string>
    <string name="pic_tip">长按图片保存到相册</string>

    <string name="querenlingqu">确 认 领 取</string>
    <!--排行榜-->
    <string name="daily_rankings">日排行榜</string>
    <string name="universal_leaderboard">总排行榜</string>
    <string name="rank_tips">排行数据每天更新一次</string>
    <string name="ranking">排名</string>
    <string name="ranking_name">名称</string>
    <string name="total_income">总收益(元)</string>

    <!--我的任务-->
    <string name="already_used">已领用</string>
    <string name="completed">已完成</string>


    <!--会员列表-->
    <string name="huiyuanliebiao">会员列表</string>
    <string name="membership_tips1">我的一级会员列表</string>
    <string name="membership_tips2">我的二级会员列表</string>
    <string name="earns_commission">已赚佣金(元)</string>

    <!--我的钱包-->
    <string name="xiaofeimingxi">消费明细</string>
    <string name="total">合计：</string>

    <!--提现-->
    <string name="lijitixian">立 即 提 现</string>
    <string name="tixianfangshi">选择提现方式</string>
    <string name="yixianjine">输入提现金额</string>
    <string name="keyixianjine">可提现金额</string>

    <string name="main_pay_success">支付成功</string>
    <string name="main_pay_fail">支付失败</string>
    <string name="main_pay_cancel">支付取消</string>
</resources>
