<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/layout_title"/>
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginTop="10dp"
    android:text="@string/nick_name"
    android:textSize="12sp"
    />

    <EditText
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:elevation="3dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="10sp"
        android:hint="@string/nick_name_hint"
        android:lines="1"
        android:background="@drawable/edit_shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/sex"
        android:textSize="12sp"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/man"
            android:textSize="12sp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:elevation="3dp"
            android:background="@drawable/edit_shape" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:text="@string/woman"
            android:textSize="12sp"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:elevation="3dp"
            android:background="@drawable/edit_shape" />

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/phone"
        android:textSize="12sp"
        />

    <EditText
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="10sp"
        android:elevation="3dp"
        android:hint="@string/phone_hint"
        android:lines="1"
        android:background="@drawable/edit_shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/owned_city"
        android:textSize="12sp"
        />

    <EditText
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:elevation="3dp"
        android:paddingBottom="10dp"
        android:textSize="10sp"
        android:hint="@string/owned_city_hint"
        android:lines="1"
        android:background="@drawable/edit_shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/urban_area"
        android:textSize="12sp"
        />

    <EditText
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="10sp"
        android:elevation="3dp"
        android:hint="@string/urban_area_hint"
        android:lines="1"
        android:background="@drawable/edit_shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/detailed_address"
        android:textSize="12sp"
        />

    <EditText
        android:layout_marginTop="5dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="10sp"
        android:gravity="top|left"
        android:hint="@string/detailed_address_hint"
        android:lines="3"
        android:elevation="3dp"
        android:background="@drawable/edit_shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <include layout="@layout/button_layout"/>
</LinearLayout>