<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/layout_title"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/old_password"
        android:textSize="12sp"
        android:textColor="@color/txt_black" />

    <EditText
        android:id="@+id/name_edit"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textSize="12sp"
        android:hint="@string/name_hint"
        android:lines="1"
        android:background="@drawable/edit_shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/new_password"
        android:textSize="12sp"
        android:textColor="@color/txt_black"/>

    <EditText
        android:id="@+id/phone_edit"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textSize="12sp"
        android:hint="@string/phone_hint"
        android:lines="1"
        android:background="@drawable/edit_shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/confirm_password"
        android:textSize="12sp"
        android:textColor="@color/txt_black" />
    <EditText
        android:id="@+id/address_edit"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:textSize="12sp"
        android:hint="@string/address_hint"
        android:lines="1"
        android:background="@drawable/edit_shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <include layout="@layout/button_layout" />

</LinearLayout>