<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/layout_title" />

    <TextView
        android:id="@+id/tip_tv"
        android:text="@string/membership_tips1"
        android:gravity="center"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="12sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:elevation="3dp"
        android:background="@drawable/edit_shape"
        android:layout_width="match_parent"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/ranking"
            android:textSize="12sp"
            android:gravity="center"
            android:textColor="@color/txt_black"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/ranking_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="12sp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/txt_black"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/earns_commission"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textSize="12sp"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/txt_black"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        tools:listitem="@layout/item_ranking"
        tools:itemCount="5"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</LinearLayout>