<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/head_img"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/ic_launcher"
        android:layout_width="50dp"
        android:layout_height="50dp" />
    <TextView
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="5dp"
        android:drawableStart="@mipmap/home_select"
        android:drawableEnd="@mipmap/home_unselect"
        android:gravity="center_vertical"
        android:text="@string/personal_info"
        android:textSize="12sp"
        android:textColor="@color/txt_black" />
    <TextView
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="5dp"
        android:drawableStart="@mipmap/home_select"
        android:drawableEnd="@mipmap/home_unselect"
        android:gravity="center_vertical"
        android:text="@string/mine_team"
        android:textSize="12sp"
        android:textColor="@color/txt_black" />
    <TextView
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="5dp"
        android:drawableStart="@mipmap/home_select"
        android:drawableEnd="@mipmap/home_unselect"
        android:gravity="center_vertical"
        android:text="@string/wallet"
        android:textSize="12sp"
        android:textColor="@color/txt_black" />
    <TextView
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="5dp"
        android:drawableStart="@mipmap/home_select"
        android:drawableEnd="@mipmap/home_unselect"
        android:gravity="center_vertical"
        android:text="@string/put_forward"
        android:textSize="12sp"
        android:textColor="@color/txt_black" />
    <TextView
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="5dp"
        android:drawableStart="@mipmap/home_select"
        android:drawableEnd="@mipmap/home_unselect"
        android:gravity="center_vertical"
        android:text="@string/change_password"
        android:textSize="12sp"
        android:textColor="@color/txt_black" />
    <include layout="@layout/button_layout"/>
</LinearLayout>